App title and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   -->
 
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
-  <title>React App</title>
+  <title>Koalagram | Instagram for Koalas</title>
 </head>
 
 <body>
